crates/uselesskey/tests/snapshots/snapshots_facade__rsa_snapshots__facade_rsa_2048_shape.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: result
---
algorithm: RSA-2048
private_key_pem_header: "-----BEGIN PRIVATE KEY-----"
private_key_der_len: 1216
public_key_pem_header: "-----BEGIN PUBLIC KEY-----"
public_key_der_len: 294
