crates/uselesskey/tests/snapshots/snapshots_facade__rsa_snapshots__snapshots_rsa_private_jwk_structure.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: redacted
---
alg: RS256
d: "[REDACTED]"
dp: "[REDACTED]"
dq: "[REDACTED]"
e: "[REDACTED]"
kid: "[REDACTED]"
kty: RSA
n: "[REDACTED]"
p: "[REDACTED]"
q: "[REDACTED]"
qi: "[REDACTED]"
use: sig
