crates/uselesskey/tests/snapshots/snapshots_facade__rsa_snapshots__snapshots_rsa_public_jwk_structure.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: redacted
---
alg: RS256
e: "[REDACTED]"
kid: "[REDACTED]"
kty: RSA
n: "[REDACTED]"
use: sig
